--- a/APP_PUBLIC/src/app/posts-list/posts-list.component.html
+++ b/APP_PUBLIC/src/app/posts-list/posts-list.component.html
@@ -3,10 +3,10 @@
         <div class="d-flex justify-content-between align-items-center">
             <div class="d-flex justify-content-between align-items-center">
                 <div class="mr-2">
-                    <img class="rounded-circle" width="45" src="/userImages/{{user.profilePic}}" alt="">
+                    <img class="rounded-circle" width="45" src="/userImages/{{userPost.user.profilePic}}" alt="">
                 </div>
                 <div class="ml-2">
-                    <div class="h5 m-0">@{{user.fName}} {{user.lName}}</div>
+                    <div class="h5 m-0">{{userPost.user.fName}} {{userPost.user.lName}}</div>
                     <!-- <div class="h7 text-muted">Miracles Lee Cross</div> -->
                 </div>
             </div>
@@ -28,7 +28,7 @@
 
     </div>
     <div class="card-body">
-        <div class="text-muted h7 mb-2"> <i class="fa fa-clock-o"></i>10 min ago</div>
+        <div class="text-muted h7 mb-2"> <i class="fa fa-clock-o"></i>  {{userPost.datePosted | date:'medium'}}</div>
         <!-- <a class="card-link" href="#">
             <h5 class="card-title">Lorem ipsum dolor sit amet, consectetur adip.</h5>
         </a> -->
@@ -46,7 +46,7 @@
         </div>
     </div>
     <div class="card-footer">
-        <a href="#" class="card-link"><i class="fa fa-gittip"></i> Like</a>
+        <a (click)="likeUnlikeClicked(userPost)" class="card-link"><i [ngClass]="userPost.class"></i> {{userPost.likes.length}}</a>
         <a href="#" class="card-link"><i class="fa fa-comment"></i> Comment</a>
         <a href="#" class="card-link"><i class="fa fa-mail-forward"></i> Share</a>
     </div>
