--- a/APP_PUBLIC/src/app/user-register/user-register.component.html
+++ b/APP_PUBLIC/src/app/user-register/user-register.component.html
@@ -47,8 +47,8 @@
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-4">
-                        <label for="emailId">Email Id</label>
-                        <input type="email" class="form-control" id="emailId" placeholder="Email Id" name="emailId">
+                        <label for="emailIdReg">Email Id</label>
+                        <input type="email" class="form-control" id="emailIdReg" placeholder="Email Id" name="emailIdReg">
                     </div>
                     <div class="form-group col-md-4">
                         <label for="mobile">Mobile</label>
@@ -88,9 +88,9 @@
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <label for="password">Password</label>
-                        <input type="password" class="form-control" id="password" placeholder="Password"
-                            name="password">
+                        <label for="passwordReg">Password</label>
+                        <input type="password" class="form-control" id="passwordReg" placeholder="Password"
+                            name="passwordReg">
                     </div>
                     <div class="form-group col-md-6">
                         <label for="profilePic">Select Image</label>
